# SemanticServer

./: .gitignore  README.md  openapi.yaml  pyproject.toml  setup.py
scripts/: bootstrap.py  bootstrap.sh  generate.sh  launch.sh
src/semanticdatabase/: document.py  logging_config.py  main.py
src/semanticserver/: config.py  main.py
src/semanticserver/embeddings/: base.py  chroma.py  semantic_db.py  sentence_transformer.py
src/semanticserver/models/: generated.py
test/: fetch_constitution.py  test_client.py  test_query.py
