[project]
name = "semanticserver"
version = "0.1.0"
description = "A semantic search server for text fragments"
authors = [{ name = "Mauro Condarelli", email = "mc5686@@mcilink.it" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pyyaml",
    "chromadb",
    "datamodel-code-generator",
    "sentence-transformers"
]

[project.optional-dependencies]
cuda = ["torch==2.1.0+cu118", "torchvision==0.16.0+cu118", "torchaudio==2.1.0+cu118"]
rocm = ["torch==2.1.0+rocm5.4.2", "torchvision==0.16.0+rocm5.4.2", "torchaudio==2.1.0+rocm5.4.2"]
dev = ["black", "flake8", "mypy", "pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

pydantic=2.11
fastapi=0.115
semanticserver=0.1
PyYAML=6.0
chromadb=1.0
sentence-transformers=4.0
requests=2.32
setuptools=78.1